--- a/styles.css
+++ b/styles.css
@@ -632,11 +632,33 @@ table.quizinvideoreviewsummary td.cell {
 #page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmarkcontainer form {
     display: inline;
 }
-#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmarkcontainer form input {
+#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancetimeofvideocontainer form input {
     margin: 0;
     padding: 0.2em;
     height: 1em;
 }
+#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancetimeofvideocontainer .editicon {
+    width: 13px;
+}
+#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancetimeofvideocontainer.infoitem {
+    background: transparent;
+}
+#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancetimeofvideocontainer form {
+    display: inline;
+}
+#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancetimeofvideocontainer form input {
+    margin: 0;
+    padding: 0.2em;
+    height: 1em;
+}
+
+#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancetimeofvideocontainer {
+    background: white;
+    padding: 0.2em;
+    margin: 0.4em;
+}
+
+
 
 #page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark {
     display: inline-block;
