decimal points bug fixed. style change to show video in middle. repaginate shows weird time. need to fix

--- a/styles.css
+++ b/styles.css
@@ -941,3 +941,10 @@ table#categoryquestions {
 #page-mod-quizinvideo-edit ul.slots li.section ul.section {
     list-style: none;
 }
+
+#page-mod-quizinvideo-edit div.video_div #video_content {
+    display: block;
+    margin: auto;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
