quiz shows even if video is seeked. review is paginated, works for later quiz pages too. forcefully state changed of attempt as inprogress, still  issue:later pages are readonly. fixit

--- a/styles.css
+++ b/styles.css
@@ -986,6 +986,9 @@ table#categoryquestions {
     margin-bottom: -1000px;
 }
 
+#page-mod-quizinvideo-attempt div#formwithanswer form.questionflagsaveform{
+    padding: 1em;
+}
 #page-mod-quizinvideo-attempt form#responseform div.page{
     padding: 1em;
 }
