--- a/styles.css
+++ b/styles.css
@@ -963,16 +963,15 @@ table#categoryquestions {
 }
 
 #page-mod-quizinvideo-edit div#video_div #video_content_html5_api,
+#page-mod-quizinvideo-edit div#video_div #video_content_flash_api,
+#page-mod-quizinvideo-edit div#video_div #video_content,
 #page-mod-quizinvideo-attempt div#video_div #video_content{
     display: block;
     width: 100%;
     height: 80vh;
 }
-
-#page-mod-quizinvideo-edit div#video_div #video_content_html5_api,
-#page-mod-quizinvideo-edit div#video_div #video_content{
-    display: block;
-    width: 100%;
+#page-mod-quizinvideo-edit div#video_div{
+    padding-bottom: 2em;
 }
 
 #page-mod-quizinvideo-attempt div[role=main]{
