bug fixed, renamed some scripts, copy error fixed. quizinvideo works. section name renaming bug is there

--- a/styles.css
+++ b/styles.css
@@ -853,6 +853,7 @@ table.quizinvideoreviewsummary td.cell {
 }
 
 #page-mod-quizinvideo-edit .section .activity .actions {
+    position: absolute;
     white-space: nowrap;
     background: #e6e6e6;
     padding: 0.1em 0;
