--- a/styles.css
+++ b/styles.css
@@ -2389,10 +2389,13 @@ and the native poster can take over */
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     padding: 5px 8px 4px;
-    background-color: #000;
+    background-color: red;
     color: #fff;
     max-width: 200px;
-    text-align: center
+    text-align: center;
+    font-size: medium;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .vjs-break-overlay {
